--- a/planner/templates/planner/add_event.html
+++ b/planner/templates/planner/add_event.html
@@ -6,7 +6,7 @@
 <div class="container mt-5">
     <h2>Add Event</h2>
    
-    <form method="post" id="planner-form" class="d-flex flex-column">
+    <!-- <form method="post" id="planner-form" class="d-flex flex-column">
         {% csrf_token %}
         <div class="d-flex mb-3">
             {{ form.event_name|as_crispy_field }}
@@ -17,8 +17,13 @@
             {{ form.event_time|as_crispy_field }}
             <button type="submit" class="btn btn-primary ml-2 no-margin">Add Event</button>
         </div>
+    </form> -->
+    <form method="post" id="planner-form" class="d-flex flex-column">
+        {% csrf_token %}
+        {{ form|crispy }}
+        <button type="submit" class="btn btn-primary mt-3">Add Event</button>
     </form>
     
 </div>
-<a href="{% url 'planner:planner_view' %}" class="btn btn-secondary mt-3">Back to Planner</a>
+<a href="{% url 'planner:planner_view' %}" class="btn btn-secondary mt-3">Back to Event Planner</a>
 {% endblock %}
