--- a/planner/templates/planner/edit_event.html
+++ b/planner/templates/planner/edit_event.html
@@ -7,7 +7,7 @@
 <div class="container mt-5">
     <h2>Edit Event</h2>
    
-    <form method="post" id="planner-form" class="d-flex flex-column">
+    <!-- <form method="post" id="planner-form" class="d-flex flex-column">
         {% csrf_token %}
         <div class="d-flex mb-3">
             {{ form.event_name|as_crispy_field }}
@@ -18,8 +18,12 @@
             {{ form.event_time|as_crispy_field }}
             <button type="submit" class="btn btn-primary ml-2 no-margin">Update Event</button>
         </div>
+    </form> -->
+    <form method="post" id="planner-form" class="d-flex flex-column">
+        {% csrf_token %}
+        {{ form|crispy }}
+        <button type="submit" class="btn btn-primary mt-3">Update Event</button>
     </form>
-    
 </div>
-<a href="{% url 'planner:planner_view' %}" class="btn btn-secondary mt-3">Back to Planner</a>
+<a href="{% url 'planner:planner_view' %}" class="btn btn-secondary mt-3">Back to Events Planner</a>
 {% endblock %}
