--- a/staticfiles/css/currentstyles.css
+++ b/staticfiles/css/currentstyles.css
@@ -40,7 +40,7 @@
     --bs-white: #fff;
     --bs-gray: #3e3e3e;
     --bs-gray-dark: #1e1e1e;
-    --bs-body-bg: #212529; 
+    --bs-body-bg: #212529;
     --bs-primary: #4d112c;
 }
 
@@ -65,18 +65,20 @@
     color: var(--bs-white);
 }
 
-[data-theme="light"] .title-text{
-    color: var(--bs-black);
-}
-[data-theme="dark"] .title-text{
+[data-theme="light"] .title-text {
     color: var(--bs-black);
 }
 
-[data-theme="light"] .main-title-text{
+[data-theme="dark"] .title-text {
+    color: var(--bs-black);
+}
+
+[data-theme="light"] .main-title-text {
     font-family: "Pacifico", serif;
     color: var(--bs-primary);
 }
-[data-theme="dark"] .main-title-text{
+
+[data-theme="dark"] .main-title-text {
     font-family: "Pacifico", serif;
     color: var(--bs-primary);
 }
@@ -85,7 +87,8 @@
 
 /* global */
 
-html, body {
+html,
+body {
     margin: 0;
     padding: 0;
     height: 100%;
@@ -118,10 +121,10 @@ main {
 /* navbar */
 nav {
     width: 100%;
-    position: fixed; 
+    position: fixed;
     top: 0;
     left: 0;
-    z-index: 1000; 
+    z-index: 1000;
 }
 
 .navbar {
@@ -130,8 +133,10 @@ nav {
 }
 
 .nav-item a .profile-image {
-    opacity: 1 !important; /* Ensure profile image is fully opaque */
-    transition: none !important; /* Exempt profile image from hover transition */
+    opacity: 1 !important;
+    /* Ensure profile image is fully opaque */
+    transition: none !important;
+    /* Exempt profile image from hover transition */
 }
 
 .trans-text {
@@ -279,12 +284,12 @@ body.menu-open .menu {
     color: var(--bs-white);
     border: none;
     cursor: pointer;
-    transition: background-color 0.3s ease; 
+    transition: background-color 0.3s ease;
 }
 
 .btn-log:hover {
     background-color: var(--bs-gray-dark);
-    color: var(--bs-white) 
+    color: var(--bs-white)
 }
 
 
@@ -297,6 +302,11 @@ body.menu-open .menu {
 }
 
 /* containers */
+.container {
+    width: 100%;
+    margin: 0 auto;
+    padding: 0 15px;
+}
 .app-container {
     background-color: rgba(255, 255, 255, 0.8);
     padding: 20px;
@@ -306,9 +316,11 @@ body.menu-open .menu {
 }
 
 .scrollable-container {
-    max-height: 400px; /* Adjust the height as needed */
+    max-height: 400px;
+    /* Adjust the height as needed */
     overflow-y: auto;
-    padding-right: 15px; /* Optional: Add padding to avoid scrollbar overlap */
+    padding-right: 15px;
+    /* Optional: Add padding to avoid scrollbar overlap */
 }
 
 .login-container {
@@ -358,6 +370,7 @@ body.menu-open .menu {
 .card-body .text-muted {
     color: #6c757d !important;
 }
+
 /* index.html */
 .feature-image {
     width: 100%;
@@ -414,7 +427,35 @@ footer {
 }
 
 [data-theme="dark"] .footer-icons {
-    color: var(--bs-white); 
+    color: var(--bs-white);
+}
+
+/* event planner */
+
+/* custom CSS for FullCalendar */
+.fc-toolbar {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 10px;
+}
+
+.fc .fc-toolbar-title{
+    margin: 10px;
+}
+
+.fc-toolbar .fc-left,
+.fc-toolbar .fc-center,
+.fc-toolbar .fc-right {
+    margin: 0 10px;
+}
+
+.fc-toolbar .fc-button {
+    margin: 0 5px;
+}
+
+.fc-toolbar .fc-button-group {
+    margin: 0 5px;
 }
 
 /* my account */
@@ -444,7 +485,8 @@ footer {
 }
 
 .edit-profile-picture i {
-    font-size: 1.5rem; /* Adjust icon size as needed */
+    font-size: 1.5rem;
+    /* Adjust icon size as needed */
 }
 
 
