--- a/templates/base.html
+++ b/templates/base.html
@@ -1,8 +1,5 @@
 {% load static %}
 
-<!-- {% url 'home' as home_url %}
-{% url 'movies' as movies_url %} -->
-<!-- {% url 'community' as community_url %} -->
 {% url 'account_login' as login_url %}
 {% url 'account_signup' as signup_url %}
 {% url 'account_logout' as logout_url %}
@@ -18,6 +15,8 @@
   <!-- Bootstrap 5.3.3 -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous" />
+  <!-- FullCalendar CSS -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/fullcalendar/3.10.2/fullcalendar.min.css" />
   <!-- FontAwesome -->
   <script src="https://kit.fontawesome.com/645226beaa.js" crossorigin="anonymous"></script>
   <!-- Google Fonts -->
@@ -25,7 +24,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet" />
   <!-- Custom CSS-->
-  <link rel="stylesheet" href="{% static 'css/style.css' %}" />
+  <link rel="stylesheet" href="{% static 'css/styles.css' %}" />
   <link rel="stylesheet" href="{% static 'css/giftbox.css' %}" />
   <!-- favicon.io -->
   <link rel="apple-touch-icon" sizes="180x180" href="{% static 'images/apple-touch-icon.png' %}">
@@ -37,75 +36,64 @@
 <body>
   <nav class="navbar navbar-expand-lg">
     <div class="container-fluid">
-      <!-- <div class="brand-container d-flex align-items-center"> -->
       <a class="navbar-brand d-flex align-items-center" href="{% url 'home' %}">
         <img src="{% static 'images/gift-genie-white.png' %}" alt="Gifting Genie Logo" class="brand-icon me-2" />
         <h1 class="brand mb-0 d-inline">Gift Genie</h1>
       </a>
-    <!-- </div> -->
-    <!-- <div class="toggler-container position-absolute top-0 end-0 p-3"> -->
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
         aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
-    <!-- </div> -->
-    <div class="collapse navbar-collapse" id="navbarNav">
-      <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-        {% if user.is_authenticated %}
-        <li class="nav-item d-flex align-items-center">
-          <a class="nav-link d-flex align-items-center profile-link" href="{% url 'myaccount:myaccount_home' %}">
-            {% if user.myaccount.profile_image %}
-            <img src="{{ user.myaccount.profile_image.url }}" alt="Profile Image"
-              class="rounded-circle profile-image" />
-            {% else %}
-            <img src="https://res.cloudinary.com/dqm93egis/image/upload/v1738488445/nobody_l7bbqh.jpg"
-              alt="Profile Image" class="rounded-circle profile-image" />
-            {% endif %}
-            <span class="profile-text">{{ user.username }}</span>
-          </a>
-        </li>
-        {% endif %}
-        <!-- <li class="nav-item">
-                            <a class="nav-link trans-text" aria-current="page" href="#">Home</a>
-                        </li> -->
-        <li class="nav-item">
-          <a class="nav-link trans-text" href="{% url 'friendslist' %}">Friends</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link trans-text" href="{% url 'wishlist' %}">Wishlist</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link trans-text" href="{% url 'planner:planner_view' %}">Event Planner</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link trans-text" href="{% url 'myaccount:myaccount_home' %}">My Account</a>
-        </li>
-        <li class="nav-item">
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
           {% if user.is_authenticated %}
-          <a class="btn btn-danger btn-rounded ms-2" href="{% url 'account_logout' %}">
-            Log out
-          </a>
-          {% else %}
-          <a class="btn btn-primary btn-rounded ms-2" href="{% url 'account_login' %}">
-            Log in
-          </a>
+          <li class="profile-link flex align-items-center mx-3">
+            <a class="nav-link trans-text" href="{% url 'myaccount:myaccount_home' %}">
+              {% if user.myaccount.profile_image %}
+              <img src="{{ user.myaccount.profile_image.url }}" alt="Profile Image"
+                class="rounded-circle profile-image" />
+              {% else %}
+              <img src="https://res.cloudinary.com/dn7aws3wl/image/upload/v1739390582/nobody_pcaqjl.jpg"
+                alt="Profile Image" class="rounded-circle profile-image" />
+              {% endif %}
+              <span class="">{{ user.username }}</span>
+            </a>
+          </li>
           {% endif %}
-        </li>
-        <li class="nav-item">
-          <a class="btn btn-secondary btn-rounded ms-2" href="{% url 'account_signup' %}">Sign up</a>
-        </li>
-        <!-- Add the toggle button here -->
-        <li class="nav-item">
-          <button id="theme-toggle" onclick="toggleTheme()" class="btn btn-secondary btn-rounded ms-2"
-            aria-label="Enable Dark Mode">
-            <i id="theme-icon" class="fas fa-moon"></i>
-          </button>
-        </li>
-      </ul>
-    </div>
+          <li class="nav-item">
+            <a class="nav-link trans-text" href="{% url 'friendslist' %}">Friends</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link trans-text" href="{% url 'wishlist' %}">Wishlist</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link trans-text" href="{% url 'planner:planner_view' %}">Event Planner</a>
+          </li>
+          <li class="nav-item">
+            {% if user.is_authenticated %}
+            <a class="nav-link trans-text" href="{% url 'account_logout' %}">
+              Log out
+            </a>
+            {% else %}
+            <a class="nav-link trans-text" href="{% url 'account_login' %}">
+              Log in
+            </a>
+
+          </li>
+          <li class="nav-item">
+            <a class="btn btn-secondary btn-rounded ms-2" href="{% url 'account_signup' %}">Sign up</a>
+          </li>
+          {% endif %}
+          <li class="nav-item">
+            <button id="theme-toggle" onclick="toggleTheme()" class="btn btn-secondary btn-rounded ms-2"
+              aria-label="Enable Dark Mode">
+              <i id="theme-icon" class="fas fa-moon"></i>
+            </button>
+          </li>
+        </ul>
+      </div>
     </div>
   </nav>
-  <!-- Messages section -->
   <div class="container mt-3">
     {% if messages %}
     <div class="messages alert alert-dismissible fade show" role="alert">
@@ -120,7 +108,6 @@
   </div>
   <main>
     {% block content %}
-    <!-- content goes here-->
     {% endblock content %}
   </main>
 
@@ -148,13 +135,18 @@
     </div>
   </footer>
 
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-    crossorigin="anonymous"></script>
+  <!-- Bootstrap 5.3.3 -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+   </script>
+  <!-- FullCalendar JS from CDN -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.1/moment.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/fullcalendar/3.10.2/fullcalendar.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/fullcalendar@6.1.15/index.global.min.js"></script>
+  <script src="https://unpkg.com/@popperjs/core@2"></script>
+  <script src="https://unpkg.com/tippy.js@6"></script>
   <script src="{% static 'js/theme.js' %}"></script>
   <script src="{% static 'js/script.js' %}"></script>
   {% block extra_body %}
-  <!-- extra body content goes here -->
   {% endblock extra_body %}
 </body>
 
