--- a/wishlist/templates/wishlist/wishlist.html
+++ b/wishlist/templates/wishlist/wishlist.html
@@ -1,21 +1,31 @@
-{% extends 'base.html' %}
+{% extends "base.html" %}
+{% load static %}
+{% load crispy_forms_tags %}
 
 {% block content %}
 <div class="app-container mt-5">
     <h1 class="main-title-text mb-3">My Wishlist</h1>
-    <a href="{% url 'add_wishlist_item' %}" class="btn btn-log mb-3">Add to Wishlist</a>
-    <div style="height: 400px; overflow-y: auto; border: 1px solid #ccc; padding: 10px;">
+    <a href="{% url 'add_wishlist_item' %}" class="btn btn-rounded btn-log mb-3">Add to Wishlist</a>
+    <div class="scrollable-container" style=" overflow-y: auto; border: 1px solid #ccc; padding: 10px;">
         <ul class="list-group">
             {% for item in wishlist_items %}
             <li class="list-group-item">
-                <h5>{{ item.item_name }}</h5>
-                <p>{{ item.description }}</p>
+                {% if item.thumbnail_url %}
+                <img src="{{ item.thumbnail_url }}" alt="{{ item.item_name }}" class="img-thumbnail mr-3" style="width: 100px; height: 100px; object-fit: cover;">
+                {% else %}
+                <div class="img-thumbnail mr-3" style="width: 100px; height: 100px; background-color: #f0f0f0; display: flex; align-items: center; justify-content: center;">
+                    <span>No Image</span>
+                </div>
+                {% endif %}
+                <div>
+                    <h5>{{ item.item_name }}</h5>
+                    <p>{{ item.description }}</p>
                 <a href="{{ item.link }}" target="_blank">{{ item.link|slice:":65" }}{% if item.link|length > 50 %}...{% endif %}</a>
                 <div class="mt-2">
-                    <a href="{% url 'edit_wishlist_item' item.id %}" class="btn btn-warning btn-sm">Edit</a>
+                    <a href="{% url 'edit_wishlist_item' item.id %}" class="btn btn-baby-blue btn-warning btn-sm">Edit</a>
                     <form method="post" action="{% url 'delete_wishlist_item' item.id %}" style="display:inline;">
                         {% csrf_token %}
-                        <button type="submit" class="btn btn-danger btn-sm">Delete</button>
+                        <button type="submit" class="btn btn-rounded btn-danger btn-sm">Delete</button>
                     </form>
                 </div>
             </li>
